[package]
name = "netscan-pro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.31"

[lib]
name = "netscan_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "netscan-pro"
path = "src/main.rs"
